Sun Dec  6 22:40:23 1998  Raph Levien  <raph@gimp.org>

	* gnome-canvas.h:
	* gnome-canvas.c: Added basic support for antialiased rendering.
	It's overeager to repaint (for example, any time an item gets
	translated, the entire bounding box gets repainted). There is
	no support yet for affine transformations or clip paths. However,
	I feel that the basic concept is sound.

	* gnome-canvas-rect-ellipse.h:
	* gnome-canvas-rect-ellipse.c: I am using the rect-ellipse item as
	the basic testbed for adding antialiased rendering. It's certainly
	not perfect yet, but it basically works in the test-gnome demo.

1998-12-07  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gnome-mdi.c: slight indentation changes. added documentation
	to public functions.

1998-12-05  Jeff Garzik  <jgarzik@pobox.com>

	* gnome-href.[ch]:
	Made const-correct.
	Added API docs.
	Small formatting cleanups (judicious use of blank lines).
	gnome_href_new() returns NULL if url arg is NULL.  (this is
	implied with gnome_href_set_url checks)

1998-12-03  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-about.c (gnome_about_new): I got a bit carried away.

1998-12-04  Jaka Mocnik <jaka.mocnik@kiss.uni-lj.si>

	* gnome-mdi.h: removed GNOME_MDI_REDRAW enum.
	* gnome-mdi.c (gnome_mdi_set_mode): fixed a bug that caused
	a toplevel window to be opened during the initial call.
	(gnome_mdi_add_toplevel_view): make it do what you want it
	to (One Of The Few, Pink Floyd, Final Cut, 1983) ;).
	* gnome-mdi-session.h: changed typedef GnomeMDIChildCreate to
	GnomeMDIChildCreator - it sounds better ;).
	* gnome-mdi-session.c (gnome_mdi_save_state): properly save
	window origins. fixed window ids to REALLY be the pointers
	to GnomeApps. session saving should now work for all modes.
	(widget_parent_func): removed. use view_window_func instead.
	(window_list_func): removed.

1998-12-03  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-canvas.c: Indentation fixes.  Also, the main canvas module