@@ -1,3 +1,9 @@
+1998-12-08  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>
+
+	* gnome-mdi-child.[ch], gnome-mdi-generic-child.[ch]:
+	some cosmetic fixes. added almost all documentation.
+	* gnome-mdi.c: some doc fixes.
+	
 Sun Dec  6 22:40:23 1998  Raph Levien  <raph@gimp.org>
 
 	* gnome-canvas.h:
